# mai-lab-expr

./: CMakeLists.txt
solve/: solve.c  solve.h  tree_from_expr.c  tree_from_expr.h
structures/: data.c  data.h  queue.c  queue.h  stack_generic.c  stack_generic.h
utils/: utils.c  utils.h
